<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/subject_row_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:hint="@string/subject_title"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subject_row_title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subject_row_subject_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/subject_row_number"/>

        <TextView
            android:id="@+id/subject_row_subject_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/subject_type"/>

        <TextView
            android:id="@+id/subject_row_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/subject_date"/>
    </LinearLayout>

</RelativeLayout>