<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="exercise6.id1195252.com.exercise6.MainActivity">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/mainactivity_subject_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:hint="@string/subject_name"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/mainactivity_subject_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainactivity_subject_name"
                android:layout_marginTop="10dp"
                android:hint="@string/subject_number"
                android:inputType="number"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/mainactivity_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/mainactivity_subject_number"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/core"
                    android:textSize="18sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elective"
                    android:textSize="18sp" />

            </RadioGroup>

            <DatePicker
                android:id="@+id/mainactivity_date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainactivity_radio_group"
                android:layout_marginTop="8dp">


            </DatePicker>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mainactivity_date_picker"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/mainactivity_add_subject_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_subject"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/mainactivity_list_subject_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_subject"
                    android:layout_weight="1"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
